Localization for status field. Lotsa refactoring on the Credit Notes project.

--- a/Adjustments/App_LocalResources/ViewCreditNotesIssued.aspx.fr.resx
+++ b/Adjustments/App_LocalResources/ViewCreditNotesIssued.aspx.fr.resx
@@ -116,13 +116,13 @@
   </resheader>
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </resheader>    
+  </resheader>
   <data name="NO_RECORDS_TEXT" xml:space="preserve">
     <value>{FR}No records found.</value>
-  </data>  
+  </data>
   <data name="MTFilterGrid1Resource1.Title" xml:space="preserve">
     <value>{FR}Credit Note Documents</value>
-  </data>  
+  </data>
   <data name="PageResource1.Title" xml:space="preserve">
     <value>{FR}MetraNet - View Credit Notes Issued</value>
   </data>
@@ -134,7 +134,7 @@
   </data>
   <data name="TEXT_DISPLAY_AMOUNT" xml:space="preserve">
     <value>{FR}Amount</value>
-  </data>    
+  </data>
   <data name="TEXT_CREATED_BY" xml:space="preserve">
     <value>{FR}Created By</value>
   </data>
@@ -146,17 +146,20 @@
   </data>
   <data name="TEXT_ID" xml:space="preserve">
     <value>{FR}Id</value>
-  </data> 
+  </data>
   <data name="TEXT_TAX" xml:space="preserve">
     <value>{FR}Tax</value>
   </data>
   <data name="TEXT_DISPLAY_TAX" xml:space="preserve">
     <value>{FR}Tax</value>
-  </data>   
+  </data>
   <data name="TEXT_TOTAL" xml:space="preserve">
     <value>{FR}Total</value>
-  </data> 
+  </data>
   <data name="TEXT_DISPLAY_TOTAL" xml:space="preserve">
     <value>{FR}Total</value>
-  </data>     
+  </data>
+  <data name="TEXT_STATUS" xml:space="preserve">
+    <value>{FR}Status</value>
+  </data>
 </root>
