CORE-7473:- Payer field isn't highlighted in spite of the fact, it is required field. Issue partially fixed.

--- a/App_GlobalResources/ErrorMessages.resx
+++ b/App_GlobalResources/ErrorMessages.resx
@@ -279,4 +279,7 @@
   <data name="ERROR_MULTIPLE_ACCOUNT_UPDATE_PENDING_CHANGES" xml:space="preserve">
     <value>This account already has a pending change of type Account Update. Only one pending change of this type is permitted.</value>
   </data>
+  <data name="ERROR_PAYER_ID_IS_REQUIRED" xml:space="preserve">
+    <value>Invalid or Missing Payer</value>
+  </data>
 </root>
