FEAT-3529. Add "Create Credit Note" menu item to account menu

--- a/App_GlobalResources/MainMenu.es-MX.resx
+++ b/App_GlobalResources/MainMenu.es-MX.resx
@@ -249,6 +249,9 @@
     <data name="TEXT_CREATE_BACKOUT_RERUN" xml:space="preserve">
         <value>Crear devolución/repetición</value>
     </data>
+	<data name="TEXT_CREATE_CREDIT_NOTE" xml:space="preserve">
+        <value>{ES-MX}Create Credit Note</value>
+    </data>
     <data name="TEXT_CREATE_NEW_REPORT_INSTANCE" xml:space="preserve">
         <value>Agregar nueva instancia de informe</value>
     </data>
