Features FEAT-3101 Optionally Issue Credit Note Document... FEAT-3534
Populate Credit Note template dropdown

--- a/Adjustments/App_LocalResources/CreateCreditNote.aspx.resx
+++ b/Adjustments/App_LocalResources/CreateCreditNote.aspx.resx
@@ -129,4 +129,7 @@
   <data name="MTPanel1Resource1.Text" xml:space="preserve">
     <value>Create Credit Note Documnet for Adjustment Issued</value>
   </data>
+  <data name="ddTemplateTypesResource1.Label" xml:space="preserve">
+    <value>Credit Note Template To Use</value>
+  </data>
 </root>
