--- a/Adjustments/App_LocalResources/CreateCreditNote.aspx.resx
+++ b/Adjustments/App_LocalResources/CreateCreditNote.aspx.resx
@@ -132,4 +132,11 @@
   <data name="ddTemplateTypesResource1.Label" xml:space="preserve">
     <value>Credit Note Template To Use</value>
   </data>
+  <data name="ddTimeIntervalsResource1.Text" xml:space="preserve">
+    <value>7 days,30 Days,90 Days,120 Days,365 Days </value>
+  </data>
+  <data name="ddTimeIntervalsResource1.Label" xml:space="preserve">
+    <value>Adjustments issued in past </value>
+  </data>
+
 </root>
