--- a/Adjustments/App_LocalResources/CreateCreditNote.aspx.ja.resx
+++ b/Adjustments/App_LocalResources/CreateCreditNote.aspx.ja.resx
@@ -118,30 +118,30 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="NO_RECORDS_TEXT" xml:space="preserve">
-    <value>No records found.</value>
+    <value>{JA}No records found.</value>
   </data>
   <data name="MTFilterGrid1Resource1.Title" xml:space="preserve">
-    <value>Credit Note Documents</value>
+    <value>{JA}Credit Note Documents</value>
   </data>
   <data name="PageResource1.Title" xml:space="preserve">
-    <value>MetraNet - Create Credit Note Document for Adjustments Issued</value>
+    <value>{JA}MetraNet - Create Credit Note Document for Adjustments Issued</value>
   </data>
   <data name="MTPanel1Resource1.Text" xml:space="preserve">
-    <value>Create Credit Note Documnet for Adjustment Issued</value>
+    <value>{JA}Create Credit Note Documnet for Adjustment Issued</value>
   </data>
   <data name="btnIssueCreditNoteResource1.Text" xml:space="preserve">
-    <value>Issue Credit Note</value>
+    <value>{JA}Issue Credit Note</value>
   </data>
   <data name="btnCancelResource1.Text" xml:space="preserve">
-    <value>Cancel</value>
+    <value>{JA}Cancel</value>
   </data>
   <data name="ddTemplateTypesResource1.Label" xml:space="preserve">
-    <value>Credit Note Template To Use</value>
+    <value>{JA}Credit Note Template To Use</value>
   </data>
   <data name="ddTimeIntervalsResource1.Label" xml:space="preserve">
-    <value>Adjustments Issued In The Past</value>
+    <value>{JA}Adjustments Issued In The Past</value>
   </data>
   <data name="CommentTextBoxResource1.Label" xml:space="preserve">
-    <value>Comment</value>
+    <value>{JA}Comment</value>
   </data>
- </root>
+</root>
