--- a/Adjustments/App_LocalResources/CreateCreditNote.aspx.ja.resx
+++ b/Adjustments/App_LocalResources/CreateCreditNote.aspx.ja.resx
@@ -118,30 +118,33 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="NO_RECORDS_TEXT" xml:space="preserve">
-    <value>{JA}No records found.</value>
+    <value>No records found.</value>
   </data>
   <data name="MTFilterGrid1Resource1.Title" xml:space="preserve">
-    <value>{JA}Credit Note Documents</value>
+    <value>Credit Note Documents</value>
   </data>
   <data name="PageResource1.Title" xml:space="preserve">
-    <value>{JA}MetraNet - Create Credit Note Document for Adjustments Issued</value>
+    <value>MetraNet - Create Credit Note Document for Adjustments Issued</value>
   </data>
   <data name="MTPanel1Resource1.Text" xml:space="preserve">
-    <value>{JA}Create Credit Note Documnet for Adjustment Issued</value>
+    <value>Create Credit Note Documnet for Adjustment Issued</value>
   </data>
   <data name="btnIssueCreditNoteResource1.Text" xml:space="preserve">
-    <value>{JA}Issue Credit Note</value>
+    <value>Issue Credit Note</value>
   </data>
   <data name="btnCancelResource1.Text" xml:space="preserve">
-    <value>{JA}Cancel</value>
-  </data>
-  <data name="ddTemplateTypesResource1.Label" xml:space="preserve">
-    <value>{JA}Credit Note Template To Use</value>
-  </data>
-  <data name="ddTimeIntervalsResource1.Label" xml:space="preserve">
-    <value>{JA}Adjustments Issued In The Past</value>
+    <value>Cancel</value>
   </data>
   <data name="CommentTextBoxResource1.Label" xml:space="preserve">
-    <value>{JA}Comment</value>
+    <value>Comment</value>
+  </data>
+ <data name="ddTemplateTypesResource1.Label" xml:space="preserve">
+    <value>Credit Note Template To Use</value>
+  </data>
+  <data name="ddTimeIntervalsResource1.Text" xml:space="preserve">
+    <value>7 days,30 Days,90 Days,120 Days,365 Days </value>
+  </data>
+  <data name="ddTimeIntervalsResource1.Label" xml:space="preserve">
+    <value>Adjustments issued in past </value>
   </data>
 </root>
