--- a/Adjustments/App_LocalResources/CreateCreditNote.aspx.resx
+++ b/Adjustments/App_LocalResources/CreateCreditNote.aspx.resx
@@ -135,13 +135,16 @@
   <data name="btnCancelResource1.Text" xml:space="preserve">
     <value>Cancel</value>
   </data>
-  <data name="ddTemplateTypesResource1.Label" xml:space="preserve">
-    <value>Credit Note Template To Use</value>
-  </data>
-  <data name="ddTimeIntervalsResource1.Label" xml:space="preserve">
-    <value>Adjustments Issued In The Past</value>
-  </data>
   <data name="CommentTextBoxResource1.Label" xml:space="preserve">
     <value>Comment</value>
   </data>
- </root>
+ <data name="ddTemplateTypesResource1.Label" xml:space="preserve">
+    <value>Credit Note Template To Use</value>
+  </data>
+  <data name="ddTimeIntervalsResource1.Text" xml:space="preserve">
+    <value>7 days,30 Days,90 Days,120 Days,365 Days </value>
+  </data>
+  <data name="ddTimeIntervalsResource1.Label" xml:space="preserve">
+    <value>Adjustments issued in past </value>
+  </data>
+</root>
