--- a/Adjustments/App_LocalResources/IssueMiscellaneousAdjustment.aspx.fr.resx
+++ b/Adjustments/App_LocalResources/IssueMiscellaneousAdjustment.aspx.fr.resx
@@ -133,7 +133,7 @@
     <value>{FR}Internal Description</value>
   </data>
   <data name="adjDescriptionTextBoxResource2.Label" xml:space="preserve">
-    <value>{FR}Subscriber Description</value>
+    <value>{FR}Invoice Description</value>
   </data>
   <data name="adjDescriptionTextBoxResource1.MaxLength" xml:space="preserve">
     <value>-1</value>
