--- a/Adjustments/App_LocalResources/IssueMiscellaneousAdjustment.aspx.resx
+++ b/Adjustments/App_LocalResources/IssueMiscellaneousAdjustment.aspx.resx
@@ -133,7 +133,7 @@
     <value>Internal Description</value>
   </data>
   <data name="adjDescriptionTextBoxResource2.Label" xml:space="preserve">
-    <value>Subscriber Description</value>
+    <value>Invoice Description</value>
   </data>
   <data name="adjDescriptionTextBoxResource1.MaxLength" xml:space="preserve">
     <value>-1</value>
