--- a/Adjustments/App_LocalResources/IssueMiscellaneousAdjustment.aspx.es-MX.resx
+++ b/Adjustments/App_LocalResources/IssueMiscellaneousAdjustment.aspx.es-MX.resx
@@ -133,7 +133,7 @@
     <value>{ES-MX}Internal Descripción</value>
   </data>
   <data name="adjDescriptionTextBoxResource2.Label" xml:space="preserve">
-    <value>{ES-MX}Subscriber Description</value>
+    <value>{ES-MX}Invoice Description</value>
   </data>
   <data name="adjDescriptionTextBoxResource1.MaxLength" xml:space="preserve">
     <value>-1</value>
