--- a/Adjustments/App_LocalResources/IssueMiscellaneousAdjustment.aspx.es.resx
+++ b/Adjustments/App_LocalResources/IssueMiscellaneousAdjustment.aspx.es.resx
@@ -133,7 +133,7 @@
     <value>{ES}Internal Descripción</value>
   </data>
   <data name="adjDescriptionTextBoxResource2.Label" xml:space="preserve">
-    <value>{ES}Subscriber Description</value>
+    <value>{ES}Invoice Description</value>
   </data>
   <data name="adjDescriptionTextBoxResource1.MaxLength" xml:space="preserve">
     <value>-1</value>
