--- a/Adjustments/App_LocalResources/IssueMiscellaneousAdjustment.aspx.it.resx
+++ b/Adjustments/App_LocalResources/IssueMiscellaneousAdjustment.aspx.it.resx
@@ -133,7 +133,7 @@
     <value>{IT}Internal Descrizione</value>
   </data>
   <data name="adjDescriptionTextBoxResource2.Label" xml:space="preserve">
-    <value>{IT}Subscriber Description</value>
+    <value>{IT}Invoice Description</value>
   </data>
   <data name="adjDescriptionTextBoxResource1.MaxLength" xml:space="preserve">
     <value>-1</value>
