CORE-7237: Clean up description fields for misc adjustments

--- a/config/Localization/metratech.com/metratech.com_AccountCredit_es-MX.xml
+++ b/config/Localization/metratech.com/metratech.com_AccountCredit_es-MX.xml
@@ -64,11 +64,11 @@
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/AccountCredit/InternalComment</Name>
-            <Value>Comentario interno</Value>
+            <Value>[es-MX]Internal Description</Value>
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/AccountCredit/InvoiceComment</Name>
-            <Value>Comentario de factura</Value>
+            <Value>[es-MX]Invoice Description</Value>
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/AccountCredit/Issuer</Name>
