--- a/config/Localization/metratech.com/metratech.com_AccountCredit_gb.xml
+++ b/config/Localization/metratech.com/metratech.com_AccountCredit_gb.xml
@@ -64,11 +64,11 @@
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/AccountCredit/InternalComment</Name>
-            <Value>Internal Comment</Value>
+            <Value>Internal Description</Value>
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/AccountCredit/InvoiceComment</Name>
-            <Value>Invoice Comment</Value>
+            <Value>Invoice Description</Value>
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/AccountCredit/Issuer</Name>
