--- a/config/Localization/metratech.com/metratech.com_AccountCredit_it.xml
+++ b/config/Localization/metratech.com/metratech.com_AccountCredit_it.xml
@@ -64,11 +64,11 @@
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/AccountCredit/InternalComment</Name>
-            <Value>Commento interno</Value>
+            <Value>[it]Internal Description</Value>
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/AccountCredit/InvoiceComment</Name>
-            <Value>Commento fattura</Value>
+            <Value>[it]Invoice Description</Value>
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/AccountCredit/Issuer</Name>
