--- a/config/Localization/metratech.com/metratech.com_AccountCredit_de.xml
+++ b/config/Localization/metratech.com/metratech.com_AccountCredit_de.xml
@@ -64,11 +64,11 @@
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/AccountCredit/InternalComment</Name>
-            <Value>Interne Anmerkung</Value>
+            <Value>[de]Internal Description</Value>
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/AccountCredit/InvoiceComment</Name>
-            <Value>Rechnungsanmerkung</Value>
+            <Value>[de]Invoice Description</Value>
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/AccountCredit/Issuer</Name>
