--- a/config/Localization/metratech.com/metratech.com_AccountCredit_es.xml
+++ b/config/Localization/metratech.com/metratech.com_AccountCredit_es.xml
@@ -64,11 +64,11 @@
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/AccountCredit/InternalComment</Name>
-            <Value>Comentario interno</Value>
+            <Value>[es]Internal Description</Value>
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/AccountCredit/InvoiceComment</Name>
-            <Value>Comentario sobre la factura</Value>
+            <Value>[es]Invoice Description</Value>
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/AccountCredit/Issuer</Name>
