CORE-7565 Partition to Core Integration (Partition breaks CORE functionality): 'Search Filters' section contains additional field on 'Add Subscription' page Reviewer YZapara

--- a/Subscriptions/App_LocalResources/SelectPO.aspx.en-GB.resx
+++ b/Subscriptions/App_LocalResources/SelectPO.aspx.en-GB.resx
@@ -159,4 +159,7 @@
     <data name="StartDate.HeaderText" xml:space="preserve">
         <value>Start Date</value>
     </data>
+	<data name="TEXT_PartitionID" xml:space="preserve">
+		<value>Partition Id</value>
+	</data>	
 </root>
