--- a/Subscriptions/App_LocalResources/SelectPO.aspx.resx
+++ b/Subscriptions/App_LocalResources/SelectPO.aspx.resx
@@ -159,7 +159,7 @@
   <data name="StartDate.HeaderText" xml:space="preserve">
     <value>Start Date</value>
   </data>
-  <data name="TEXT_TENANTID" xml:space="preserve">
+  <data name="TEXT_PartitionID" xml:space="preserve">
     <value>Partition Id</value>
   </data>
 </root>
