CORE-7565 Partition to Core Integration (Partition breaks CORE functionality): 'Search Filters' section contains additional field on 'Add Subscription' page Reviewer YZapara

--- a/config/Localization/LayoutText/LayoutText_us.xml
+++ b/config/Localization/LayoutText/LayoutText_us.xml
@@ -3,6 +3,10 @@
     <language_code>us</language_code>
     <locale_space name="LayoutText">
         <locale_entry>
+            <Name>LayoutText/POListLayoutTemplate/</Name>
+            <Value></Value>
+        </locale_entry>
+        <locale_entry>
             <Name>LayoutText/AudioConfCall/Title</Name>
             <Value>Conference Details</Value>
         </locale_entry>
