--- a/App_GlobalResources/MainMenu.es.resx
+++ b/App_GlobalResources/MainMenu.es.resx
@@ -591,4 +591,7 @@
   <data name="TEXT_ASSIGN_BILL_MESSAGES" xml:space="preserve">
     <value>Spanish</value>
   </data>
+	<data name="TEXT_ADD_CHILD_ACCOUNT" xml:space="preserve">
+     <value>[es]Add child Account</value>
+  </data>
 </root>
