--- a/App_GlobalResources/MainMenu.fr.resx
+++ b/App_GlobalResources/MainMenu.fr.resx
@@ -594,4 +594,7 @@
   <data name="TEXT_ASSIGN_BILL_MESSAGES" xml:space="preserve">
     <value>Assigner les messages de la facture</value>
   </data>
+   <data name="TEXT_ADD_CHILD_ACCOUNT" xml:space="preserve">
+        <value>[Fr]Add child Account</value>
+   </data>
 </root>
