--- a/App_GlobalResources/MainMenu.it.resx
+++ b/App_GlobalResources/MainMenu.it.resx
@@ -591,4 +591,7 @@
   <data name="TEXT_ASSIGN_BILL_MESSAGES" xml:space="preserve">
     <value>Italian</value>
   </data>
+    <data name="TEXT_ADD_CHILD_ACCOUNT" xml:space="preserve">
+        <value>[It]Add child Account</value>
+    </data>
 </root>
