Account 360: Account status and balance panels working Updates to menu text from Scott (Bhavani email)

--- a/App_GlobalResources/MainMenu.resx
+++ b/App_GlobalResources/MainMenu.resx
@@ -624,4 +624,7 @@
   <data name="TEXT_USAGE_PROCESSING" xml:space="preserve">
     <value>Usage Processing</value>
   </data>
+  <data name="TEXT_ACCOUNT" xml:space="preserve">
+    <value>Account</value>
+  </data>
 </root>
