CORE-7537L- Partition to Core Integration: Shared Price List has incorrect currency on try to edit it, fixed

--- a/App_GlobalResources/ErrorMessages.resx
+++ b/App_GlobalResources/ErrorMessages.resx
@@ -282,4 +282,10 @@
   <data name="ERROR_PAYER_ID_IS_REQUIRED" xml:space="preserve">
     <value>Invalid or Missing Payer</value>
   </data>
+  <data name="ERROR_INVALID_CURRENCY" xml:space="preserve">
+    <value>Invalid Currency</value>
+  </data>
+  <data name="ERROR_INVALID_PARTITIONID" xml:space="preserve">
+    <value>Invalid Partition ID</value>
+  </data>
 </root>
