--- a/Adjustments/App_LocalResources/CreateCreditNote.aspx.it.resx
+++ b/Adjustments/App_LocalResources/CreateCreditNote.aspx.it.resx
@@ -121,51 +121,51 @@
     <value>{IT}Issue Credit Note</value>
   </data>
   <data name="btnCancelResource1.Text" xml:space="preserve">
-    <value>{IT}ICancel</value>
+    <value>{IT}Cancel</value>
   </data>
   <data name="CommentTextBoxResource1.Label" xml:space="preserve">
-    <value>{IT}IComment</value>
+    <value>{IT}Comment</value>
   </data>
    <data name="ddTemplateTypesResource1.Label" xml:space="preserve">
-    <value>{IT}ICredit Note Template To Use</value>
+    <value>{IT}Credit Note Template To Use</value>
   </data>
   <data name="ddTimeIntervalsResource1.Text" xml:space="preserve">
     <value>7 days,30 Days,90 Days,120 Days,365 Days</value>
   </data>
   <data name="ddTimeIntervalsResource1.Label" xml:space="preserve">
-    <value>{IT}IAdjustments Issued In The Past</value>
+    <value>{IT}Adjustments Issued In The Past</value>
   </data>
   <data name="MTFilterGrid1Resource1.Title" xml:space="preserve">
-    <value>{IT}ICredit Note Documents</value>
+    <value>{IT}Credit Note Documents</value>
   </data>
   <data name="MTPanel1Resource1.Text" xml:space="preserve">
-    <value>{IT}ICreate Credit Note Document for Adjustment Issued</value>
+    <value>{IT}Create Credit Note Document for Adjustment Issued</value>
   </data>
   <data name="NO_RECORDS_TEXT" xml:space="preserve">
-    <value>{IT}INo records found.</value>
+    <value>{IT}No records found.</value>
   </data>
   <data name="PageResource1.Title" xml:space="preserve">
-    <value>{IT}IMetraNet - Create Credit Note Document for Adjustments Issued</value>
+    <value>{IT}MetraNet - Create Credit Note Document for Adjustments Issued</value>
   </data>   
   <data name="TEXT_ADJUSTMENT_TYPE" xml:space="preserve">
-    <value>{IT}IAdjustment</value>
+    <value>{IT}Adjustment</value>
   </data>
   <data name="TEXT_AMOUNT" xml:space="preserve">
-    <value>{IT}IAmount</value>
+    <value>{IT}Amount</value>
   </data>
   <data name="TEXT_CREDIT_NOTE_IDENTIFIER" xml:space="preserve">
-    <value>{IT}ICredit Note Identifier</value>
+    <value>{IT}Credit Note Identifier</value>
   </data>
   <data name="TEXT_DATE" xml:space="preserve">
-    <value>{IT}IDate</value>
+    <value>{IT}Date</value>
   </data>
   <data name="TEXT_DESCRIPTION" xml:space="preserve">
-    <value>{IT}IDescription</value>
+    <value>{IT}Description</value>
   </data>
   <data name="TEXT_DISPLAY_ADJUSTMENT_TYPE" xml:space="preserve">
-    <value>{IT}IAdjustment</value>
+    <value>{IT}Adjustment</value>
   </data>
   <data name="TEXT_DISPLAY_AMOUNT" xml:space="preserve">
-    <value>{IT}IAmount</value>
+    <value>{IT}Amount</value>
   </data>  
 </root>
